overflow in mobile view fixed

--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,10 @@
 
 }
 
-body {
+
+html,body{
     font-family: 'Montserrat', sans-serif;
+    overflow-x: hidden;
 }
 
 h1,
